[package]
name = "arkworks-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4"
ark-mnt6-753 = "0.4"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.2"

# [patch.crates-io]
# ark-ff = { path = "../algebra/ff" }