[package]
name = "arkworks-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-crypto-primitives = { version = "0.4", features = ["crh", "r1cs"] }
ark-ec = "0.4"
ark-std = "0.4"
ark-r1cs-std = "0.4"
ark-relations = "0.4"
ark-mnt6-753 = { version = "0.4", features = ["r1cs"] }
